frontend/src/Profile.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
}

.user-greeting{
    text-align: center;
    margin-top: 20px;
    color: rgb(124, 197, 228);
}

.bottom-nav {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.user-info-box{
    width: 300px;
    margin: 30px auto;
    padding: 20px;
    border-radius: 10px;
    background-color: #f5f5f5;

    display: flex;
    flex-direction: column;
    gap: 12px;
}

.username,
.university,
.major,
.GPA {
    font-size: 16px;
}

.update-info-button{
    margin-top: 15px;
    text-align: center;
    background-color: rgb(194, 233, 250);
    color: rgb(125, 123, 123);
}

.update-info-button button {
    padding: 8px 14px;
    cursor: pointer;
}

.profile-container{
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items:center;
    height: 100vh;
    text-align:center;
    gap: 12px;
}

